<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="347dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/icone"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:src="@drawable/droppertexto" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_versao"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/versao"
                android:textSize="19sp" />
        </LinearLayout>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sobre_autores"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:text="@string/sobre_descricao"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:text="@string/sobre_licensa"
            android:textSize="16sp" />
        
    </LinearLayout>
    

</ScrollView>