<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="132dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/droppertexto" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/descreve_calculadora"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnNovoCalculo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:text="Novo Calculo"
                android:textSize="15sp" />
         
            <Button
                android:id="@+id/btnSobre"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/action_sobre"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sobre_descricao"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>